--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-certifi==2021.5.30
-chardet==4.0.0
-idna==2.10
-requests==2.25.1
-selenium==3.141.0
-urllib3==1.26.5
+atomicwrites==1.4.0
+attrs==21.2.0
+colorama==0.4.4
+iniconfig==1.1.1
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+toml==0.10.2
+
+freezegun~=1.1.0
